@@ -7,7 +7,6 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.web.client.RestTemplateBuilder;
@@ -45,7 +44,7 @@ public class UserInfoAuthoritiesService {
      * @param userInfoUri userinfo Endpoint URI
      * @param restTemplateBuilder ein {@link RestTemplateBuilder}
      */
-    public UserInfoAuthoritiesService(String userInfoUri, RestTemplateBuilder restTemplateBuilder) {
+    public UserInfoAuthoritiesService(final String userInfoUri, final RestTemplateBuilder restTemplateBuilder) {
         this.userInfoUri = userInfoUri;
         this.restTemplate = restTemplateBuilder.build();
         this.cache = new CaffeineCache(NAME_AUTHENTICATION_CACHE,
@@ -62,17 +61,18 @@ public class UserInfoAuthoritiesService {
      * @param jwt der JWT
      * @return die {@link GrantedAuthority}s gem. Claim "authorities" des /userinfo Endpoints
      */
-    public Collection<SimpleGrantedAuthority> loadAuthorities(Jwt jwt) {
-        ValueWrapper valueWrapper = this.cache.get(jwt.getSubject());
+    public Collection<SimpleGrantedAuthority> loadAuthorities(final Jwt jwt) {
+        final ValueWrapper valueWrapper = this.cache.get(jwt.getSubject());
         if (valueWrapper != null) {
             // value present in cache
             @SuppressWarnings("unchecked")
-            Collection<SimpleGrantedAuthority> authorities = (Collection<SimpleGrantedAuthority>) valueWrapper.get();
+            final Collection<SimpleGrantedAuthority> authorities = (Collection<SimpleGrantedAuthority>) valueWrapper.get();
             log.debug("Resolved authorities (from cache): {}", authorities);
             return authorities;
         }
 
         log.debug("Fetching user-info for token subject: {}", jwt.getSubject());
+        @SuppressWarnings("PMD.LooseCoupling")
         final HttpHeaders headers = new HttpHeaders();
         headers.set(HttpHeaders.AUTHORIZATION, "Bearer " + jwt.getTokenValue());
         final HttpEntity<String> entity = new HttpEntity<>(headers);
@@ -80,7 +80,7 @@ public class UserInfoAuthoritiesService {
         Collection<SimpleGrantedAuthority> authorities = new ArrayList<>();
         try {
             @SuppressWarnings("unchecked")
-            Map<String, Object> map = restTemplate.exchange(this.userInfoUri, HttpMethod.GET, entity,
+            final Map<String, Object> map = restTemplate.exchange(this.userInfoUri, HttpMethod.GET, entity,
                     Map.class).getBody();
 
             log.debug("Response from user-info Endpoint: {}", map);
@@ -98,18 +98,19 @@ public class UserInfoAuthoritiesService {
         return authorities;
     }
 
-    private static List<SimpleGrantedAuthority> asAuthorities(Object object) {
-        List<SimpleGrantedAuthority> authorities = new ArrayList<>();
-        if (object instanceof Collection) {
-            Collection<?> collection = (Collection<?>) object;
-            object = collection.toArray(new Object[0]);
+    private static List<SimpleGrantedAuthority> asAuthorities(final Object object) {
+        final List<SimpleGrantedAuthority> authorities = new ArrayList<>();
+        Object authoritiesObject = object;
+        if (authoritiesObject instanceof Collection) {
+            final Collection<?> collection = (Collection<?>) authoritiesObject;
+            authoritiesObject = collection.toArray(new Object[0]);
         }
-        if (ObjectUtils.isArray(object)) {
+        if (ObjectUtils.isArray(authoritiesObject)) {
             authorities.addAll(
-                    Stream.of(((Object[]) object))
+                    Stream.of((Object[]) authoritiesObject)
                             .map(Object::toString)
                             .map(SimpleGrantedAuthority::new)
-                            .collect(Collectors.toList()));
+                            .toList());
         }
         return authorities;
     }
